dkms (2.0.19.1-0ubuntu1#DISTTAG#) #DIST#; urgency=low
  [ Matt Domsch ]
  *  depmod on uninstall before mkinitrd, depmod fix & cleanups
  *  find_module_from_ko() could incorrectly return multiple values
  * RPM:
    - fix file/dir ownerships in dkms.spec
  * use 'date -R' in mkdeb creating debian/changelog
  * RPM:
    - use /etc/kernel/{prerm,postinst}.d/dkms in RPMs now too
    - mkrpm: display rpmbuild log on error, write RPMs $dkms_tree
    - clarify license in spec to GPLv2+

 -- Matt Domsch <Matt_Domsch@dell.com>  Thu, 20 Mar 2008 14:00:49 -0500

dkms (2.0.19-0ubuntu2) hardy; urgency=low

  * Depend on awk instead of gawk.  All variants of awk provide the
    currently required functionality.

 -- Mario Limonciello <mario_limonciello@dell.com>  Wed, 26 Mar 2008 16:51:33 -0500

dkms (2.0.19-0ubuntu1) hardy; urgency=low

  * New upstream version.
    - Fixes appending date to debian/changelog in mkdeb.

 -- Mario Limonciello <mario_limonciello@dell.com>  Wed, 26 Mar 2008 10:46:52 -0500

dkms (2.0.17.6-0ubuntu1) hardy; urgency=low

  [ Matt Domsch ]
  * Correct kernel uninstall trigger (LP: #192240)
  * Call udevadm trigger if present, fall back to udevtrigger (LP: #192241)
  * Fix uninstallation with weak modules (Red Hat BZ#429410)
  * debian/control:
    - Update standards version to 3.7.3
    - Add Vcs-git repository.

 -- Mario Limonciello <mario_limonciello@dell.com>  Mon, 18 Feb 2008 09:40:18 -0600

dkms (2.0.17.4-0ubuntu4) hardy; urgency=low

  * Fix -x call.

 -- Scott James Remnant <scott@ubuntu.com>  Fri, 14 Dec 2007 16:52:51 +0000

dkms (2.0.17.4-0ubuntu3) hardy; urgency=low

  * dkms: call udevadm instead of udevtrigger

 -- Scott James Remnant <scott@ubuntu.com>  Fri, 14 Dec 2007 16:15:13 +0000

dkms (2.0.17.5-0ubuntu1#DISTTAG#) #DIST#; urgency=low
	
  * Correct DKMS file install/uninstall problems  (LP: #151644)
    - call udevtrigger if we install a module for the currently running kernel
    - uninstall from /extra before DEST_MODULE_LOCATION