@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Ubuntu MOTU Developers <ubuntu-motu@lists.ubuntu.com>
 XSBC-Original-Maintainer: Matt Domsch <Matt_Domsch@dell.com>
-Build-Depends: debhelper (> 5)
+Build-Depends: debhelper (> 5), cdbs
 Standards-Version: 3.7.3
 Vcs-git: http://linux.dell.com/git/dkms.git
 
