@@ -1,97 +1,16 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
+include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/cdbs/1/class/makefile.mk
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+GIT_BRANCH+=$(cat control | grep "Vcs-git" | awk '{ print $2 }')
+TARFILE+=$(DEB_SOURCE_PACKAGE)_$(DEB_UPSTREAM_VERSION).orig.tar.gz
 
+get-orig-source::
+	git clone $(GIT_BRANCH) $(DEB_SOURCE_PACKAGE)
+	tar czf $(CURDIR)/../$(TARFILE) $(DEB_SOURCE_PACKAGE) --exclude debian,.git
+	rm -rf $(CURDIR)/$(DEB_SOURCE_PACKAGE)
 
+../$(TARFILE):: get-orig-source
 
-
-CFLAGS = -Wall -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-
-configure: configure-stamp
-configure-stamp:
-	dh_testdir
-	# Add here commands to configure the package.
-
-	touch configure-stamp
-
-
-build: build-stamp
-
-build-stamp: configure-stamp 
-	dh_testdir
-
-	# Add here commands to compile the package.
-	$(MAKE)
-	#docbook-to-man debian/dkms.sgml > dkms.1
-
-	touch build-stamp
-
-clean:
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp configure-stamp
-
-	# Add here commands to clean up after the build process.
-	[ ! -f Makefile ] || $(MAKE) clean-dpkg
-
-	dh_clean 
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k 
-	dh_installdirs
-
-	# Add here commands to install the package into debian/dkms.
-	$(MAKE) install-ubuntu DESTDIR=$(CURDIR)/debian/dkms
-
-
-# Build architecture-independent files here.
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs 
-	dh_installdocs
-	dh_installexamples
-#	dh_install
-#	dh_installmenu
-#	dh_installdebconf	
-#	dh_installlogrotate
-#	dh_installemacsen
-#	dh_installpam
-#	dh_installmime
-	dh_installinit --name dkms_autoinstaller
-#	dh_installcron
-#	dh_installinfo
-	dh_installman
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-#	dh_perl
-#	dh_python
-#	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary-arch:
-# no op
-
-binary: binary-indep
-.PHONY: build clean binary-indep binary-arch binary install configure
+DEB_MAKE_CLEAN_TARGET    := clean-dpkg
+DEB_MAKE_INSTALL_TARGET  := install-ubuntu DESTDIR=$(CURDIR)/debian/dkms
